* Lift users list state up to App

--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@
   border: 0 !important;
 }
 
-.users-list {
+.list-container {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
