+ Added handling of fetch errors

--- a/src/App.css
+++ b/src/App.css
@@ -185,3 +185,12 @@
 .loading .card {
   opacity: 0;
 }
+
+.error-message {
+  display: none;
+  color: #ad0000;
+}
+
+.error .error-message {
+  display: inline;
+}
